--- a/default/templates/main/offers_list.html
+++ b/default/templates/main/offers_list.html
@@ -1,4 +1,4 @@
-<table class="table" id="offers_table">
+<table class="table table-dark table-responsive table-striped" id="offers_table">
     <h2>Предложения</h2>
     <thead>
     <tr>
