--- a/default/templates/main/requests_list.html
+++ b/default/templates/main/requests_list.html
@@ -1,4 +1,4 @@
-<table class="table" id="requests_table">
+<table class="table table-dark table-responsive table-striped" id="requests_table">
     <h2>Запросы</h2>
     <thead>
     <tr>
