align and justifying for main page

--- a/default/templates/base.html
+++ b/default/templates/base.html
@@ -5,7 +5,7 @@
 {% include 'header.html' %}
 </head>
 <body>
-<div id="page" class="container-fluid px-xxl-3 bg-dark text-light vh-100">
+<div id="page" class="container-fluid bg-dark text-light vh-100 vw-100 overflow-scroll">
 {% block content %}
 {% endblock content%}
 </div>
