--- a/default/templates/main/requests_list.html
+++ b/default/templates/main/requests_list.html
@@ -9,7 +9,7 @@
         <th scope="col">Операции</th>
     </tr>
     </thead>
-    <tbody id="requests_table_body">
+    <tbody class="flex-column" id="requests_table_body">
     {% for item in request_set %}
         {#        <tr class="row{% cycle "1" "2" %}">#}
         <tr>
